--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>삼성화재 클론코딩</title>
-    <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="css/normalize.css" />
+    <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/header/header.css" />
+    <link rel="stylesheet" href="css/main/main.css" />
     <link rel="stylesheet" href="css/main/sw-banner.css" />
     <link rel="stylesheet" href="css/main/sw-card.css" />
-    <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="css/footer/footer.css" />
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/sw.Banner.js" defer></script>
-    <script src="js/sw.Card.js" defer></script>
+    <script src="js/header.js" defer></script>
+    <script src="js/swBanner.js" defer></script>
+    <script src="js/swCard.js" defer></script>
   </head>
   <body>
     <div class="wrap">
@@ -27,7 +32,7 @@
           <div class="inner">
             <div class="header-top-left">
               <ul>
-                <li><a href="#">가입보험</a></li>
+                <li><a href="#">기업보험</a></li>
                 <li><a href="#">삼성화재 다이렉트</a></li>
                 <li><a href="#">회사소개</a></li>
                 <li><a href="#">IR</a></li>
@@ -131,9 +136,30 @@
                   <div class="swiper-slide">Slide 6</div>
                   <div class="swiper-slide">Slide 7</div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
+                <div class="page-nav">
+                  <div class="prev-btn">
+                    <a href="#">
+                      <img
+                        src="images/main/homepage/slider_prev.svg"
+                        alt="이전"
+                      />
+                    </a>
+                  </div>
+                  <div class="banner-pagination"></div>
+                  <div class="next-bnt">
+                    <a href="#">
+                      <img
+                        src="images/main/homepage/slider_next.svg"
+                        alt="다음"
+                      />
+                    </a>
+                  </div>
+                  <div class="play-stop-btn">
+                    <!-- <a href="#">
+           <img src="images/main/homepage/slider_play.svg" alt="재생" />
+          </a> -->
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -599,57 +625,70 @@
         <div class="footer-top">
           <ul>
             <li>
-              <a href="#"
-                ><span>소비자보호</span
-                ><img
+              <a href="#">
+                <span>소비자보호</span>
+                <img
                   src="images/common/ico-common-fold-arr.svg"
                   alt="소비자보호"
-              /></a>
+                />
+              </a>
               <ul class="submenu">
                 <li><a href="#">휴면보험금 출연 안내</a></li>
                 <li><a href="#">자동차 간접손해보험금 안내</a></li>
                 <li><a href="#">과납보험료 환급신청</a></li>
                 <li><a href="#">서민금융 1332</a></li>
                 <li><a href="#">자동차리콜센터</a></li>
-                <li><a href="#">신용정보활용제공사</a></li>
+                <li><a href="#">신용정보활용체제공시</a></li>
                 <li><a href="#">전자금융거래 유의사항</a></li>
                 <li><a href="#">이메일 무단수집 거부</a></li>
               </ul>
-              <a href="#"
-                ><span>신고센터</span
-                ><img
+            </li>
+            <li>
+              <a href="#">
+                <span>신고센터</span>
+                <img
                   src="images/common/ico-common-fold-arr.svg"
                   alt="신고센터"
-              /></a>
+                />
+              </a>
               <ul class="submenu">
-                <li><a href="#">휴면보험금 출연 안내</a></li>
+                <li><a href="#">Comming Soon</a></li>
               </ul>
-              <a href="#"
-                ><span>해외법인</span
-                ><img
+            </li>
+            <li>
+              <a href="#">
+                <span>해외법인</span>
+                <img
                   src="images/common/ico-common-fold-arr.svg"
                   alt="해외법인"
-              /></a>
+                />
+              </a>
               <ul class="submenu">
-                <li><a href="#">휴면보험금 출연 안내</a></li>
+                <li><a href="#">Comming Soon</a></li>
               </ul>
-              <a href="#"
-                ><span>패밀리사이트</span
-                ><img
+            </li>
+            <li>
+              <a href="#">
+                <span>패밀리사이트</span>
+                <img
                   src="images/common/ico-common-fold-arr.svg"
                   alt="패밀리사이트"
-              /></a>
+                />
+              </a>
               <ul class="submenu">
-                <li><a href="#">휴면보험금 출연 안내</a></li>
+                <li><a href="#">Comming Soon</a></li>
               </ul>
-              <a href="#"
-                ><span>삼성화재 SNS</span
-                ><img
+            </li>
+            <li>
+              <a href="#">
+                <span>삼성화재 SNS</span>
+                <img
                   src="images/common/ico-common-fold-arr.svg"
                   alt="삼성화재 SNS"
-              /></a>
+                />
+              </a>
               <ul class="submenu">
-                <li><a href="#">휴면보험금 출연 안내</a></li>
+                <li><a href="#">Comming Soon</a></li>
               </ul>
             </li>
           </ul>
